# snarkterm

./: .gitignore  AGENTS.md  AI_LOOP.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_REVIEW.md
.github/workflows/: ci.yml
assets/themes/: neon-midnight.toml
crates/snarkterm-app/: Cargo.toml
crates/snarkterm-app/src/: main.rs
crates/snarkterm-config/: Cargo.toml
crates/snarkterm-config/src/: lib.rs
crates/snarkterm-core/: Cargo.toml
crates/snarkterm-core/src/: lib.rs  terminal_grid.rs
crates/snarkterm-db/: Cargo.toml
crates/snarkterm-db/src/: lib.rs
crates/snarkterm-llm/: Cargo.toml
crates/snarkterm-llm/src/: lib.rs
crates/snarkterm-personality/: Cargo.toml
crates/snarkterm-personality/src/: lib.rs
crates/snarkterm-plugins/: Cargo.toml
crates/snarkterm-plugins/src/: lib.rs
crates/snarkterm-pty/: Cargo.toml
crates/snarkterm-pty/src/: lib.rs
crates/snarkterm-render/: Cargo.toml
crates/snarkterm-render/src/: lib.rs
crates/snarkterm-rules/: Cargo.toml
crates/snarkterm-rules/src/: lib.rs
crates/snarkterm-testkit/: Cargo.toml
crates/snarkterm-testkit/src/: lib.rs
crates/snarkterm-ui/: Cargo.toml
crates/snarkterm-ui/src/: lib.rs
docs/: ARCHITECTURE.md  DESIGN.md  MILESTONE_0_ISSUES.md  PLUGIN_API.md  PRIVACY.md  ROADMAP.md  SCHEMA.md  schema.sql
examples/: config.toml
examples/shell/: bash.sh  fish.fish  zsh.zsh
man/: snarkterm.1
scripts/: ai-review.sh  ai-task.sh  ai-test.sh
tldr/: snarkterm.md
