[package]
name = "snarkterm-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SnarkTerm application entrypoint."

[dependencies]
anyhow.workspace = true
snarkterm-core = { path = "../snarkterm-core" }
snarkterm-config = { path = "../snarkterm-config" }
tracing.workspace = true
