[package]
name = "snarkterm-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SnarkTerm application entrypoint."

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
portable-pty.workspace = true
snarkterm-core = { path = "../snarkterm-core" }
snarkterm-config = { path = "../snarkterm-config" }
tracing.workspace = true

[[bin]]
name = "snarkterm"
path = "src/main.rs"
