[package]
name = "snarkterm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal grid, state, scrollback, and event types for SnarkTerm."

[dependencies]
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
