[package]
name = "snarkterm-personality"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Personality profiles and commentary generation for SnarkTerm."

[dependencies]
chrono.workspace = true
snarkterm-core = { path = "../snarkterm-core" }
